# Pytest_Demo

./: .gitignore  .gitlab-ci.yml  LICENSE  meson.build  pixi.toml  pyproject.toml  readme.md  readme.org
GitlabCIexamples/: .gitlab-ci-basic.yml  .gitlab-ci-caching-artifacts-testresult-coverage-pages.yml  .gitlab-ci-caching-artifacts-testresult-coverage.yml  .gitlab-ci-with-caching-and-artifacts.yml  .gitlab-ci-with-caching-artifacts-testresult.yml
src/: money.hpp  pyb_core.cpp
src/pybtst2024/: _util.py  currency.py
tests/: test_currency.py  test_money.py  test_zerodiv.py
