[project]
name = "pybtst2024"
version = "0.1.0"
description = "Pybind11 meson-python pytest demo"
authors = [
    {name = "Rohit Goswami", email = "rog32[at]hi.is"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "pybind11", "ninja"]


[tool.pdm]
distribution = true
