[project]
name = "pybtst2024"
version = "0.1.0"
description = "Pybind11 meson-python pytest demo"
authors = [
    {name = "Rohit Goswami", email = "rog32[at]hi.is"},
]
dependencies = [
    "numpy>=2.1.1",
]
requires-python = ">=3.11"
readme = "readme.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov[toml]>=5.0.0",
    "ninja>=1.11.1.1",
]
[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "pybind11", "ninja"]


[tool.pdm]
distribution = true

[tool.coverage.run]
disable_warnings = [
  'couldnt-parse',
]
